# Plotting

./: .clang-format  .gitignore  CMakeLists.txt  README.md  Scratch.md
src/: main.cpp
src/MathLib/: Matrix.cpp  Matrix.hpp  Matrix.mm  MetalUtils.h  MetalUtils.mm  Tensor.cpp  Tensor.hpp  Tensor.mm  mathlib.cpp  mathlib.hpp  matrix_add.metal  matrix_mul.metal  matrix_sub.metal  matrix_transpose.metal  tensor_add.metal
src/PlotLib/: SvgGenerator.hpp  ThreadPool.hpp  graph.cpp  graph.hpp
